...
  AppLocalizationsStrings.searchOtaHint: "Search for places for your trips",
  AppLocalizationsStrings.recommendedHotelTitle: "Recommended accommodations",
  AppLocalizationsStrings.recommendedOtaTitle: "Recommended destinations",
  AppLocalizationsStrings.recentSearchItems: "Recent search terms",
  AppLocalizationsStrings.guestInformation: "Guest information",
  AppLocalizationsStrings.informationText1:
      "Guest's name as in check-in documents (English only)",
  AppLocalizationsStrings.informationText2:
      "We will send you a confirmation email to your email address below.",
  AppLocalizationsStrings.name: "Name (required)",
  AppLocalizationsStrings.lastName: "Last name (required)",
  AppLocalizationsStrings.email: "Email address",
  AppLocalizationsStrings.mobileNumber: "Mobile number",
...
